--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <nohttp-checkstyle.version>0.0.4.RELEASE</nohttp-checkstyle.version>
     <spring-format.version>0.0.19</spring-format.version>
 
-    <checkstyle.skip>true</checkstyle>
+    <checkstyle.skip>true</checkstyle.skip>
   </properties>
 
   <dependencies>
