Add Homework 7 files to GitHub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-mysql:
-  image: mysql:5.7
-  ports:
-    - "3306:3306"
-  environment:
-    - MYSQL_ROOT_PASSWORD=
-    - MYSQL_ALLOW_EMPTY_PASSWORD=true
-    - MYSQL_USER=petclinic
-    - MYSQL_PASSWORD=petclinic
+version: '3'
+services:
+  mysql:
+    image: mysql:5.7
+    ports:
+    - "3306:3306/tcp"
+    environment:
+    - MYSQL_ROOT_PASSWORD=petclinic
     - MYSQL_DATABASE=petclinic
-  volumes:
+    command: "--innodb_use_native_aio=0"
+    volumes:
     - "./conf.d:/etc/mysql/conf.d:ro"
+    - "./data.d:/var/lib/mysql"
